Added Date Validation

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -23,6 +23,11 @@
         <input asp-for="Age">
     </div>
     <div class="text-left m-3">
+        <span asp-validation-for="Birthday"></span>
+        <label asp-for="Birthday"></label>
+        <input asp-for="Birthday">
+    </div>
+    <div class="text-left m-3">
         <span asp-validation-for="Email"></span>
         <label asp-for="Email"></label>
         <input asp-for="Email">
